# bipper-rs

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  docker-compose.yml  flake.nix  index.html
dev/: docker-compose.yml
frontend/: bun.lockb  package-lock.json  package.json  tailwind.config.js
frontend/src/: app.html
frontend/src/routes/: +layout.svelte  +page.svelte
migrations/: 0001_create_blobs.sql
nix/: module.nix  tests.nix
src/: crypto.rs  database.rs  errors.rs  handlers.rs  index.html  lib.rs  main.rs  models.rs
src/crypto/: common.rs  decryption.rs  encryption.rs  mod.rs
