[package]
name = "bipper"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
axum = { version = "0.7.5" }
bip39 = "2.0.0"
dotenv = "0.15.0"
futures-util = "0.3.28"
hex = "0.4.3"
hyper = { version = "1.3.1", features = ["full"] }
rand = "0.8.5"
ring = "0.17.5"
serde = { version="1.0.188",  features = ["derive"] }
serde_json = "1.0.105"
sha256 = "1.4.0"
sqlx = { version = "0.7", features = [ "runtime-async-std", "postgres" ] }
tempfile = "3.8.0"
tokio = { version = "1.32.0", features = ["full"] }
tower = "0.4.13"
tracing = "0.1.37"
tracing-subscriber = "0.3.17"

