[package]
name = "bipper"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.95"
axum = { version = "0.8.1", features = ["multipart"] }
bip39 = "2.1.0"
dotenv = "0.15.0"
futures-util = "0.3.31"
hex = "0.4.3"
hyper = { version = "1.5.2", features = ["full"] }
rand = "0.8.5"
ring = "0.17.8"
serde = { version="1.0.217",  features = ["derive"] }
serde_json = "1.0.135"
sha256 = "1.5.0"
tempfile = "3.15.0"
tokio = { version = "1.42.0", features = ["full"] }
tokio-rusqlite = { version = "0.6.0", features = ["bundled"] }
tower = "0.5.2"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"

